Study_Spring/ResponseUtils/src/main/java/com/example/ResponseUtils/response/error/NotFoundException.java
package com.example.ResponseUtils.response.error;

public class NotFoundException extends RuntimeException{
    public NotFoundException(ErrorResponseStatus status){
        super(status.getMessage());
    }
}
